unpackaged/main/default/objects/Application__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>The application&#39;s loss reason</description>
    <inlineHelpText>The application&#39;s loss reason</inlineHelpText>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Application_Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Admission Denied by Verto</fullName>
            </value>
            <value>
                <fullName>Chose Alternate Source</fullName>
            </value>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Different Route</fullName>
            </value>
            <value>
                <fullName>Discomfort with Travel</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Family Needs</fullName>
            </value>
            <value>
                <fullName>Going Straight to Traditional College</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>Mental/Physical Health</fullName>
            </value>
            <value>
                <fullName>Non-Responsive</fullName>
            </value>
            <value>
                <fullName>Parents Veto</fullName>
            </value>
            <value>
                <fullName>Pulled from Waitlist</fullName>
            </value>
            <value>
                <fullName>Safety Concerns</fullName>
            </value>
            <value>
                <fullName>Too Old</fullName>
            </value>
            <value>
                <fullName>Closed Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>