unpackaged/main/default/objects/Application__c/fields/Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source__c</fullName>
    <description>The applicant&#39;s response to the question &quot;How did you hear about Verto?&quot;</description>
    <inlineHelpText>The applicant&#39;s response to the question &quot;How did you hear about Verto?&quot;</inlineHelpText>
    <label>Referral Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A Verto Representative Visited My School</fullName>
            </value>
            <value>
                <fullName>College Fair</fullName>
            </value>
            <value>
                <fullName>Family or Friend</fullName>
            </value>
            <value>
                <fullName>Google Search (or another search engine)</fullName>
            </value>
            <value>
                <fullName>Independent Educational Consultant</fullName>
            </value>
            <value>
                <fullName>My College</fullName>
            </value>
            <value>
                <fullName>My High School Counselor</fullName>
            </value>
            <value>
                <fullName>Online Ad</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
                <isActive>false</isActive>
                <label>Mail</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>