unpackaged/main/default/objects/Application__c/fields/Semester_Interest__c.field-meta.xml
<CustomField>
    <fullName>Semester_Interest__c</fullName>
    <description>Field created to migrate data from the &quot;Select your Starting Semester&quot; field on the lead and opportunity (July 2021)</description>
    <label>Semester Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fall 2020</fullName>
            </value>
            <value>
                <fullName>Fall 2021</fullName>
            </value>
            <value>
                <fullName>Fall 2022</fullName>
            </value>
            <value>
                <fullName>Fall 2023</fullName>
            </value>
            <value>
                <fullName>Spring 2020</fullName>
            </value>
            <value>
                <fullName>Spring 2021</fullName>
            </value>
            <value>
                <fullName>Spring 2022</fullName>
            </value>
            <value>
                <fullName>Spring 2023</fullName>
            </value>
            <value>
                <fullName>Fall 2019</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>