unpackaged/main/default/objects/Application__c/fields/Sex__c.field-meta.xml
<CustomField>
    <fullName>Sex__c</fullName>
    <label>Sex</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Intersex</fullName>
            </value>
            <value>
                <fullName>I prefer not to say</fullName>
            </value>
            <value>
                <fullName>Prefer Not to Answer</fullName>
                <isActive>false</isActive>
                <label>Prefer Not to Answer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>