unpackaged/main/default/objects/Application__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Application source</description>
    <label>Source</label>
    <length>254</length>
    <type>Text</type>
</CustomField>