unpackaged/main/default/objects/Application__c/fields/Student_s_Permanent_Home__c.field-meta.xml
<CustomField>
    <fullName>Student_s_Permanent_Home__c</fullName>
    <description>Field created to migrate data from the &quot;Permanent Home&quot; field on the lead and opportunity (July 2021)</description>
    <inlineHelpText>Form Question: &quot;With whom do you make your permanent home?&quot;</inlineHelpText>
    <label>Student&#39;s Permanent Home</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Both Parents</fullName>
            </value>
            <value>
                <fullName>Legal Guardian</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Parent 1</fullName>
            </value>
            <value>
                <fullName>Parent 2</fullName>
            </value>
            <value>
                <fullName>Ward of the Court/State</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>