unpackaged/main/default/objects/Application__c/fields/University__c.field-meta.xml
<CustomField>
    <fullName>University__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The university/college that the channel enrollment or bridge application was sourced from</description>
    <inlineHelpText>The university/college that the channel enrollment or bridge application was sourced from</inlineHelpText>
    <label>University</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applications (Channel Enrollment University)</relationshipLabel>
    <relationshipName>Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>