unpackaged/main/default/objects/Application__c/fields/University_ID__c.field-meta.xml
<CustomField>
    <fullName>University_ID__c</fullName>
    <formula>University__r.Id</formula>
    <label>University ID</label>
    <type>Text</type>
</CustomField>