unpackaged/main/default/objects/Application__c/fields/Using_FAFSA_Toward_Tuition__c.field-meta.xml
<CustomField>
    <fullName>Using_FAFSA_Toward_Tuition__c</fullName>
    <description>Field created to migrate data from the FAFSA field on the lead and opportunity (July 2021)</description>
    <inlineHelpText>Form Question: &quot;Are you planning to use the Free Application for Federal Student Aid (FAFSA) toward your Verto tuition?&quot;</inlineHelpText>
    <label>Using FAFSA Toward Tuition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>