unpackaged/main/default/objects/Application__c/fields/UTM_Content__c.field-meta.xml
<CustomField>
    <fullName>UTM_Content__c</fullName>
    <description>Used to track UTM parameter data on applications that were submitted via a link on a paid ad. This is the first UTM parameter ever captured for the person who submitted the application.</description>
    <label>UTM Content First Touch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>