unpackaged/main/default/objects/Application__c/fields/UTM_Medium_Last_Touch__c.field-meta.xml
<CustomField>
    <fullName>UTM_Medium_Last_Touch__c</fullName>
    <description>Used to track UTM parameter data on applications that were submitted via a link on a paid ad. This is the most recent UTM parameter prior to the application being submitted.</description>
    <label>UTM Medium Last Touch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>