unpackaged/main/default/objects/Application__c/fields/Year_of_High_School_Graduation__c.field-meta.xml
<CustomField>
    <fullName>Year_of_High_School_Graduation__c</fullName>
    <label>Year of High School Graduation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Year_of_High_School_Graduation</valueSetName>
    </valueSet>
</CustomField>