unpackaged/main/default/objects/Application__c/fields/z_Application_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>z_Application_Date_Time__c</fullName>
    <label>z_Application Date/Time</label>
    <type>DateTime</type>
</CustomField>