unpackaged/main/default/objects/Application__c/fields/z_Criminal_Conviction_Information__c.field-meta.xml
<CustomField>
    <fullName>z_Criminal_Conviction_Information__c</fullName>
    <label>z_Criminal Conviction Information</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>