unpackaged/main/default/objects/Application__c/fields/z_Disciplinary_Violation_Information__c.field-meta.xml
<CustomField>
    <fullName>z_Disciplinary_Violation_Information__c</fullName>
    <label>z_Disciplinary Violation Information</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>