unpackaged/main/default/objects/Application__c/recordTypes/Channel_Enrollment.recordType-meta.xml
<RecordType>
    <fullName>Channel_Enrollment</fullName>
    <active>true</active>
    <description>The record type for channel enrollment student applications</description>
    <label>Channel Enrollment</label>
</RecordType>