unpackaged/main/default/objects/Application__c/recordTypes/Traditional_Enrollment.recordType-meta.xml
<RecordType>
    <fullName>Traditional_Enrollment</fullName>
    <active>true</active>
    <description>The record type for traditional enrollment student applications</description>
    <label>Traditional Enrollment</label>
</RecordType>