unpackaged/main/default/objects/Application__c/validationRules/Restrict_Application_Name_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Application_Name_Change</fullName>
    <active>true</active>
    <description>Application name can only be edited by a system administrator</description>
    <errorConditionFormula>and(
$User.Bypass_Validation__c = false,

ischanged(Name),

left($User.ProfileId, 15) &lt;&gt; left($Label.Profile_SystemAdministrator, 15)
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>The application name can&#39;t be edited.</errorMessage>
</ValidationRule>