unpackaged/main/default/objects/Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Applicant_Email__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Lead__c</columns>
    <columns>Account__c</columns>
    <columns>University__c</columns>
    <columns>Source__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>