unpackaged/main/default/objects/Application__c/listViews/Bridge_Student_Applications.listView-meta.xml
<ListView>
    <fullName>Bridge_Student_Applications</fullName>
    <booleanFilter>(1 OR 2) and 3</booleanFilter>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Lead__c</columns>
    <columns>Account__c</columns>
    <columns>University__c</columns>
    <columns>UTM_Source__c</columns>
    <columns>UTM_Source_Last_Touch__c</columns>
    <columns>Source__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UTM_Source__c</field>
        <operation>equals</operation>
        <value>bridge</value>
    </filters>
    <filters>
        <field>UTM_Source_Last_Touch__c</field>
        <operation>equals</operation>
        <value>bridge</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Application__c.Traditional_Enrollment</value>
    </filters>
    <label>Bridge Student Applications</label>
</ListView>