unpackaged/main/default/objects/Application__c/listViews/Channel_App_Missing_Source.listView-meta.xml
<ListView>
    <fullName>Channel_App_Missing_Source</fullName>
    <columns>NAME</columns>
    <columns>Applicant_Email__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Lead__c</columns>
    <columns>Account__c</columns>
    <columns>University__c</columns>
    <columns>Source__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Application__c.Channel_Enrollment</value>
    </filters>
    <filters>
        <field>Source__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Applicant_Email__c</field>
        <operation>notContain</operation>
        <value>vertoeducation.org</value>
    </filters>
    <label>Channel App Missing Source</label>
</ListView>