unpackaged/main/default/objects/Application__c/listViews/KIPP_Student_Applications.listView-meta.xml
<ListView>
    <fullName>KIPP_Student_Applications</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Lead__c</columns>
    <columns>Account__c</columns>
    <columns>Source__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>UTM_Source__c</columns>
    <columns>UTM_Source_Last_Touch__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source__c</field>
        <operation>equals</operation>
        <value>KIPP</value>
    </filters>
    <filters>
        <field>Applicant_Email__c</field>
        <operation>notContain</operation>
        <value>@vertoeducation.org</value>
    </filters>
    <label>KIPP Student Applications</label>
</ListView>